@@ -5,25 +5,23 @@ import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.infinity.applicationservice.dtos.AllocationDto;
-import com.infinity.applicationservice.dtos.AllocationHistoryDto;
-import com.infinity.applicationservice.dtos.AllocationRequest;
-import com.infinity.applicationservice.dtos.ApplicationDto;
-import com.infinity.applicationservice.dtos.AvailabilityDto;
-import com.infinity.applicationservice.dtos.SectionDto;
-import com.infinity.applicationservice.dtos.StudentDto;
+import com.infinity.applicationservice.dtos.Allocations.AllocationHistoryDto;
+import com.infinity.applicationservice.dtos.Allocations.AllocationRequest;
+import com.infinity.applicationservice.dtos.Applications.ApplicationDto;
+import com.infinity.applicationservice.dtos.Courses.SectionDto;
+import com.infinity.applicationservice.dtos.Users.StudentDto;
+import com.infinity.applicationservice.exceptions.BadRequestException;
+import com.infinity.applicationservice.exceptions.NotFoundException;
 import com.infinity.applicationservice.feign.SectionInterface;
 import com.infinity.applicationservice.feign.UserInterface;
 import com.infinity.applicationservice.models.Allocation;
 import com.infinity.applicationservice.models.Application;
 import com.infinity.applicationservice.repositories.AllocationRepository;
 import com.infinity.applicationservice.repositories.ApplicationRepository;
+import com.infinity.applicationservice.utility.AllocationMapper;
+import com.infinity.applicationservice.utility.ApplicationMapper;
 
 import jakarta.persistence.EntityNotFoundException;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
-
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -34,41 +32,27 @@ public class AllocationService {
     private final ApplicationRepository applicationRepository;
     private final SectionInterface sectionInterface;
     private final UserInterface studentInterface;
-    
+    private final ApplicationMapper applicationMapper;
+    private final AllocationMapper allocationMapper;
 
     public List<AllocationHistoryDto> getAllocationsByStudentId(Long studentId) {
         List<Allocation> allocations = allocationRepository.findByStudentId(studentId);
         StudentDto student = studentInterface.getStudentById(studentId).getBody();
 
         return allocations.stream().map(allocation -> {
-            SectionDto section = sectionInterface.getSectionById(allocation.getSectionId()).getBody();
-            
-            Application application = allocation.getApplication();
-            ApplicationDto applicationDto = new ApplicationDto(
-                application.getStudentId(),
-                application.getSubjectPreferences(),
-                application.isWantRemote(),
-                application.getWantWorkingHours(),
-                application.getSubmittedAt(),
-                application.getAvailabilities().stream()
-                    .map(a -> new AvailabilityDto(a.getDay(), a.getStartTime().toString(), a.getEndTime().toString()))
-                    .collect(Collectors.toSet())
-            );
-            return new AllocationHistoryDto(
-                allocation.getId(),
-                student,
-                applicationDto,
-                allocation.isConfirmed(),
-                allocation.getNumberOfHours(),
-                section
-            );
+            SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+            ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+            return allocationMapper.toDto(allocation, student, applicationDto, section);
         }).collect(Collectors.toList());
-
     }
 
     public AllocationHistoryDto allocateStudent(AllocationRequest request) {
         Application application = applicationRepository.findById(request.applicationId())
-            .orElseThrow(() -> new EntityNotFoundException("Application not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Application not found"));
+        if (allocationRepository.existsByApplicationIdAndSectionIdAndStudentId(
+                request.applicationId(), request.sectionId(), request.studentId())) {
+            throw new BadRequestException("You have already allocated this student to that section");
+        }
 
         Allocation allocation = new Allocation();
         allocation.setApplication(application);
@@ -78,31 +62,22 @@ public class AllocationService {
         allocation.setSectionId(request.sectionId());
 
         Allocation saved = allocationRepository.save(allocation);
-
         StudentDto student = studentInterface.getStudentById(request.studentId()).getBody();
-        SectionDto section = sectionInterface.getSectionById(request.sectionId()).getBody();
-        
+        SectionDto section = sectionInterface.getSectionById(request.sectionId());
 
-        ApplicationDto applicationDto = new ApplicationDto(
-                application.getStudentId(),
-                application.getSubjectPreferences(),
-                application.isWantRemote(),
-                application.getWantWorkingHours(),
-                application.getSubmittedAt(),
-                application.getAvailabilities().stream()
-                    .map(a -> new AvailabilityDto(a.getDay(), a.getStartTime().toString(), a.getEndTime().toString()))
-                    .collect(Collectors.toSet())
-        );
+        ApplicationDto applicationDto = applicationMapper.toDto(application);
 
-        return new AllocationHistoryDto(
-            saved.getId(),
-            student,
-            applicationDto,
-            saved.isConfirmed(),
-            saved.getNumberOfHours(),
-            section
-        );
+        return allocationMapper.toDto(saved, student, applicationDto, section);
     }
+    
+    public String deallocateStudent(Long allocationId) {
+        if (!allocationRepository.existsById(allocationId)) {
+            throw new NotFoundException("No allocation with id " + allocationId);
+        }
+        allocationRepository.deleteById(allocationId);
+        return "Student deallocated";
+    }
+
 
     public void updateConfirmationStatus(Long allocationId, boolean status) {
         Allocation allocation = allocationRepository.findById(allocationId)
@@ -112,22 +87,64 @@ public class AllocationService {
         allocationRepository.save(allocation);
     }
 
-    public List<AllocationDto> getAllocationsBySectionId(Long sectionId) {
-        List<Allocation> allocations = allocationRepository.findBySectionId(sectionId);
-
-        return allocations.stream()
+    public List<AllocationHistoryDto> getAllocationsByConfirmationStatus(boolean status) {
+        return allocationRepository.findAll().stream()
+            .filter(a -> a.isConfirmed() == status)
             .map(allocation -> {
-                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();;
-                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId()).getBody();
-
-                return new AllocationDto(
-                    allocation.getId(),
-                    student,
-                    allocation.isConfirmed(),
-                    allocation.getNumberOfHours(),
-                    section
-                );
+                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();
+                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+                ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+                return allocationMapper.toDto(allocation, student, applicationDto, section);
             })
-            .toList();
+            .collect(Collectors.toList());
+    }
+
+    public List<AllocationHistoryDto> getAllocationsBySectionId(Long sectionId) {
+        return allocationRepository.findAll().stream()
+            .filter(a -> a.getSectionId().equals(sectionId))
+            .map(allocation -> {
+                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();
+                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+                ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+                return allocationMapper.toDto(allocation, student, applicationDto, section);
+            })
+            .collect(Collectors.toList());
+    }
+
+    public List<AllocationHistoryDto> getAllocationsByApplicationId(Long appId) {
+        return allocationRepository.findAll().stream()
+            .filter(a -> a.getApplication() != null && a.getApplication().getId().equals(appId))
+            .map(allocation -> {
+                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();
+                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+                ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+                return allocationMapper.toDto(allocation, student, applicationDto, section);
+            })
+            .collect(Collectors.toList());
+        }
+
+    public List<AllocationHistoryDto> getAllocationsByApplicationYear(int year) {
+        return allocationRepository.findAll().stream()
+            .filter(a -> a.getApplication() != null &&
+                        a.getApplication().getSubmittedAt().getYear() == year)
+            .map(allocation -> {
+                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();
+                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+                ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+                return allocationMapper.toDto(allocation, student, applicationDto, section);
+            })
+            .collect(Collectors.toList());
+        }
+
+        public List<AllocationHistoryDto> getAllocationsBySectionIdWithCourse(Long sectionId) {
+        return allocationRepository.findAll().stream()
+            .filter(a -> a.getSectionId().equals(sectionId))
+            .map(allocation -> {
+                StudentDto student = studentInterface.getStudentById(allocation.getStudentId()).getBody();
+                SectionDto section = sectionInterface.getSectionById(allocation.getSectionId());
+                ApplicationDto applicationDto = applicationMapper.toDto(allocation.getApplication());
+                return allocationMapper.toDto(allocation, student, applicationDto, section );
+            })
+            .collect(Collectors.toList());
     }
 }
